<resources>
    <string name="app_name">SnapchatClone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_example">example123@email.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_here">New Here?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Log In</string>
    <string name="chat">Chat</string>
    <string name="preference_key">com.example.snapchatclone</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirmation_prompt">Enter verification code:</string>
    <string name="verification_code_hint">123456</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_code_error">Verification code error click to resend</string>
    <string name="take_picture">Take Picture</string>
    <string name="find_users">Find users...</string>
    <string name="add_friend">Add Friend</string>
    <string name="send">Send</string>
    <string name="chat_title">Chat Title</string>
    <string name="search">Search</string>
    <string name="add">ADD</string>
    <string name="show">Show</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="close">Close</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="email">Email</string>
    <string name="capture">Capture</string>
    <string name="tap_to_chat">Tap to chat.</string>
</resources>
