<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <Button
        android:id="@+id/friendRequestAccept_button"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/friendRequestDecline_button"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/friendRequestAccept_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/friendRequestProfile_imageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/friendRequestUsername_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/friendRequestProfile_imageView"
        app:layout_constraintTop_toTopOf="@+id/friendRequestProfile_imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>